// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inserter can add blocks adds new block at the end of post 1`] = `
"<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->"
`;

exports[`Inserter can add blocks after another block 1`] = `
"<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->

<!-- fin:more -->
<!--more-->
<!-- /fin:more -->

<!-- fin:paragraph -->
<p></p>
<!-- /fin:paragraph -->"
`;

exports[`Inserter can add blocks before another block 1`] = `
"<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->

<!-- fin:paragraph -->
<p></p>
<!-- /fin:paragraph -->"
`;

exports[`Inserter can add blocks creates a new Paragraph block tapping on the empty area below the last block 1`] = `
"<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->

<!-- fin:paragraph -->
<p></p>
<!-- /fin:paragraph -->"
`;

exports[`Inserter can add blocks inserts between 2 existing blocks 1`] = `
"<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:more -->
<!--more-->
<!-- /fin:more -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->"
`;

exports[`Inserter can add blocks inserts block at the end of post when no block is selected 1`] = `
"<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->

<!-- fin:more -->
<!--more-->
<!-- /fin:more -->"
`;

exports[`Inserter can add blocks to the beginning 1`] = `
"<!-- fin:more -->
<!--more-->
<!-- /fin:more -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->

<!-- fin:paragraph -->
<p></p>
<!-- /fin:paragraph -->"
`;

exports[`Inserter can add blocks to the end 1`] = `
"<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->

<!-- fin:paragraph -->
<p></p>
<!-- /fin:paragraph -->

<!-- fin:more -->
<!--more-->
<!-- /fin:more -->"
`;
